--- a/ERP/Core.Erp.Web/Areas/CuentasPorCobrar/Views/CobranzaRetenciones/Index.cshtml
+++ b/ERP/Core.Erp.Web/Areas/CuentasPorCobrar/Views/CobranzaRetenciones/Index.cshtml
@@ -7,8 +7,10 @@
         Response.Redirect("~/Account/Login");
     }
 }
-@using (Html.BeginForm("Index", "CobranzaRetenciones", FormMethod.Post, new { @class = "form", @role = "form" }))
+@using (Html.BeginForm())
 {
+
+
     <div class="box collapsed-box">
         <div class="box-header with-border">
             <div class="row">
@@ -79,7 +81,7 @@
             </div>
         </div>
         <div class="box-body">
-           
+            @Html.Action("GridViewPartial_cobranza_ret", new {  fecha_ini = ViewBag.fecha_ini, fecha_fin = ViewBag.fecha_fin, IdSucursal = ViewBag.IdSucursal })
         </div>
         <!-- /.box-body -->
         <div class="box-footer">
@@ -87,6 +89,7 @@
         </div>
         <!-- /.box-footer-->
     </div>
+
 }
 <script>
     $(function () {
