--- a/ERP/Core.Erp.Web/Areas/CuentasPorCobrar/Views/CobranzaRetenciones/Index.cshtml
+++ b/ERP/Core.Erp.Web/Areas/CuentasPorCobrar/Views/CobranzaRetenciones/Index.cshtml
@@ -81,7 +81,7 @@
             </div>
         </div>
         <div class="box-body">
-            @Html.Action("GridViewPartial_cobranza_ret", new { Fecha_ini = Model.fecha_ini, Fecha_fin = Model.fecha_fin, IdSucursal = Model.IdSucursal })
+            @Html.Action("GridViewPartial_cobranza_ret")
         </div>
         <!-- /.box-body -->
         <div class="box-footer">
