--- a/ERP/Core.Erp.Web/Areas/CuentasPorCobrar/Views/CobranzaRetenciones/_GridViewPartial_cobranza_ret_det.cshtml
+++ b/ERP/Core.Erp.Web/Areas/CuentasPorCobrar/Views/CobranzaRetenciones/_GridViewPartial_cobranza_ret_det.cshtml
@@ -1,4 +1,5 @@
 @using System.Web.UI.WebControls;
+@model Core.Erp.Info.CuentasPorCobrar.cxc_cobro_Info
 @{
     var grid = Html.DevExpress().GridView(settings =>
     {
@@ -7,22 +8,17 @@
         settings.Width = Unit.Percentage(100);
         settings.KeyFieldName = "secuencial";
 
-        settings.SettingsPager.Visible = true;
-        settings.Settings.ShowGroupPanel = false;
-        settings.Settings.ShowFilterRow = true;
-
         settings.SettingsEditing.Mode = GridViewEditingMode.EditFormAndDisplayRow;
         settings.SettingsEditing.UpdateRowRouteValues = new { Controller = "CobranzaRetenciones", Action = "EditingAddNew", Area = "CuentasPorCobrar" };
         settings.SettingsEditing.UpdateRowRouteValues = new { Controller = "CobranzaRetenciones", Action = "EditingUpdate", Area = "CuentasPorCobrar" };
         settings.SettingsEditing.DeleteRowRouteValues = new { Controller = "CobranzaRetenciones", Action = "EditingDelete", Area = "CuentasPorCobrar" };
 
         settings.CommandColumn.Visible = true;
-        settings.CommandColumn.ShowNewButton = false;
+        settings.CommandColumn.ShowNewButton = true;
         settings.CommandColumn.ShowEditButton = true;
         settings.CommandColumn.ShowDeleteButton = true;
 
         settings.SettingsContextMenu.Enabled = true;
-        settings.SettingsContextMenu.RowMenuItemVisibility.NewRow = false;
         settings.SettingsBehavior.EnableCustomizationWindow = true;
 
         //Configuración click derecho
@@ -35,17 +31,24 @@
         settings.SettingsAdaptivity.AdaptiveColumnPosition = GridViewAdaptiveColumnPosition.Right;
         settings.SettingsAdaptivity.AllowOnlyOneAdaptiveDetailExpanded = false;
         settings.SettingsAdaptivity.HideDataCellsAtWindowInnerWidth = 0;
-
+        settings.InitNewRow = (s, e) =>
+        {
+            e.NewValues["IdCobro_tipo"] = null;
+            e.NewValues["dc_ValorPago"] = 0;
+        };
         settings.Columns.Add(column =>
         {
             column.Width = Unit.Percentage(70);
             column.FieldName = "IdCobro_tipo";
             column.Caption = "Tipo de retención";
+
             column.EditorProperties().ComboBox(p =>
             {
+                p.Width = Unit.Percentage(100);
                 p.ValueField = "IdCobro_tipo";
                 p.TextField = "tc_descripcion";
-                p.BindList(new Core.Erp.Bus.CuentasPorCobrar.cxc_cobro_tipo_Bus().get_list_retenciones(false));
+                p.ValueType = typeof(string);
+                p.DataSource = ViewBag.lst_retenciones;
                 p.ClientSideEvents.SelectedIndexChanged = "SetValorRetencion";
             });
         });
@@ -57,12 +60,13 @@
             column.PropertiesEdit.DisplayFormatString = "{0:N2}";
             column.EditorProperties().SpinEdit(p =>
             {
+                p.Width = Unit.Percentage(100);
                 p.MinValue = 0;
                 p.DisplayFormatInEditMode = true;
                 p.DisplayFormatString = "N2";
             });
         });
-        
+
     });
 }
 @grid.Bind(Model.lst_det).GetHtml()
