--- a/ERP/Core.Erp.Web/Areas/General/Views/ReportesPorUsuario/_GridViewPartial_reportes_por_usuario.cshtml
+++ b/ERP/Core.Erp.Web/Areas/General/Views/ReportesPorUsuario/_GridViewPartial_reportes_por_usuario.cshtml
@@ -43,7 +43,8 @@
         });
         settings.Columns.Add("CodReporte", "Código").Width = Unit.Percentage(10);
         settings.Columns.Add("nom_reporte", "Nombre").Width = Unit.Percentage(50);
-
+        settings.ClientSideEvents.SelectionChanged = "OnSelectionChanged";
+        settings.ClientSideEvents.BeginCallback = "OnBeginCallback";
     });
 }
 @grid.Bind(Model).GetHtml()
