--- a/ERP/Core.Erp.Web/Areas/General/Views/Reporte/Nuevo.cshtml
+++ b/ERP/Core.Erp.Web/Areas/General/Views/Reporte/Nuevo.cshtml
@@ -50,6 +50,9 @@
                         <label for="se_muestra_administrador_reportes">@Html.CheckBoxFor(q => q.se_muestra_administrador_reportes) Se muestra administrador de reportes</label>
                     </div>
                     <div class="checkbox">
+                        <label for="se_muestra_administrador_reportes">@Html.CheckBoxFor(q => q.rpt_muestra_disenador_reporte) Se muestra diseñador de reportes</label>
+                    </div>
+                    <div class="checkbox">
                         <label for="estado">@Html.CheckBoxFor(q => q.estado) Estado</label>
                     </div>
                 </div>
