--- a/ERP/Core.Erp.Web/Areas/Reportes/Views/Layout/_Layout_filtros.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Reportes/Views/Layout/_Layout_filtros.cshtml
@@ -117,7 +117,7 @@
                                settings.Name = "treeViewMenu";
                                settings.EnableHotTrack = true;
                                var Nodes = new List<Core.Erp.Info.SeguridadAcceso.seg_Menu_x_Empresa_x_Usuario_Info>();
-                               Core.Erp.Web.Areas.SeguridadAcceso.Controllers.MenuPorEmpresaPorUsuarioController.CreateTreeViewNodesRecursive(Nodes, settings.Nodes, 0, Convert.ToInt32(Session["IdEmpresa"]), Session["IdUsuario"].ToString());
+                               Core.Erp.Web.Areas.SeguridadAcceso.Controllers.MenuPorEmpresaPorUsuarioController.CreateTreeViewNodesRecursive(Nodes, settings.Nodes, 0, (Session["IdEmpresa"] == null ? 0 : Convert.ToInt32(Session["IdEmpresa"])), (Session["IdUsuario"] == null ? "" : Session["IdUsuario"].ToString()));
 
                            }).GetHtml()
                             </div>
