--- a/ERP/Core.Erp.Web/Areas/CuentasPorCobrar/Views/TipoCobro/Nuevo.cshtml
+++ b/ERP/Core.Erp.Web/Areas/CuentasPorCobrar/Views/TipoCobro/Nuevo.cshtml
@@ -131,6 +131,17 @@
 
     <div class="row">
         <div class="col-md-12">
+            <div class="col-md-12">
+                <div class="form-group">
+
+                    @Html.Action("GridViewPartial_tipo_param", "TipoCobro")
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="row">
+        <div class="col-md-12">
             <div class="col-md-2">
                 <div class="form-group">
                     <div class="checkbox">
