--- a/ERP/Core.Erp.Web/Areas/General/Views/DisenadorReporte/Nuevo.cshtml
+++ b/ERP/Core.Erp.Web/Areas/General/Views/DisenadorReporte/Nuevo.cshtml
@@ -1,4 +1,5 @@
-﻿@model Core.Erp.Info.General.tb_sis_reporte_diseno_Info
+﻿
+@model Core.Erp.Info.General.tb_sis_reporte_diseno_Info
 @{
     ViewBag.Title = "Nuevo ";
     //if (Session["IdUsuario"] == null || Session["IdEmpresa"] == null)
@@ -7,8 +8,9 @@
     //}
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
-<script src="~/bower_DevExpress/knockout/dist/knockout.js"></script>
 <script src="~/Scripts/jquery-1.11.3.min.js"></script>
+<script src="~/bower_DevExpress/knockout/dist/knockout.debug.js"></script>
+<script src="~/bower_DevExpress/knockout/dist/knockout.js"></script>
 
 <script src="~/bower_DevExpress/cldrjs/dist/cldr.js"></script>
 <script src="~/bower_DevExpress/cldrjs/dist/cldr/event.js"></script>
