--- a/ERP/Core.Erp.Web/Areas/CuentasPorCobrar/Views/TipoCobro/Anular.cshtml
+++ b/ERP/Core.Erp.Web/Areas/CuentasPorCobrar/Views/TipoCobro/Anular.cshtml
@@ -129,6 +129,16 @@
 
     <div class="row">
         <div class="col-md-12">
+            <div class="col-md-12">
+                <div class="form-group">
+                    @Html.Action("GridViewPartial_tipo_param")
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="row">
+        <div class="col-md-12">
             <div class="col-md-2">
                 <div class="form-group">
                     <div class="checkbox">
