--- a/ERP/Core.Erp.Web/Areas/CuentasPorCobrar/Views/TipoCobro/Nuevo.cshtml
+++ b/ERP/Core.Erp.Web/Areas/CuentasPorCobrar/Views/TipoCobro/Nuevo.cshtml
@@ -18,6 +18,7 @@
             </h4>
         </div>
     }
+    @Html.HiddenFor(q => q.IdEmpresa);
     <div class="row">
         <div class="col-md-12">
             <div class="col-md-3">
@@ -133,8 +134,7 @@
         <div class="col-md-12">
             <div class="col-md-12">
                 <div class="form-group">
-
-                    @Html.Action("GridViewPartial_tipo_param", "TipoCobro")
+                    @Html.Action("GridViewPartial_tipo_param")
                 </div>
             </div>
         </div>
