--- a/ERP/Core.Erp.Web/Areas/CuentasPorCobrar/Views/Cobranza/Index.cshtml
+++ b/ERP/Core.Erp.Web/Areas/CuentasPorCobrar/Views/Cobranza/Index.cshtml
@@ -8,7 +8,7 @@
     Layout = "~/Views/Layout/_LayoutConsulta.cshtml";
 }
 
-@using (Html.BeginForm("Index", "ConciliacionCaja", FormMethod.Post, new { @role = "form", @class = "form" }))
+@using (Html.BeginForm("Index", "Cobranza", FormMethod.Post, new { @role = "form", @class = "form" }))
 {
     <div class="box collapsed-box">
         <div class="box-header with-border">
