--- a/ERP/Core.Erp.Web/Areas/CuentasPorCobrar/Views/CobranzaRetenciones/Index.cshtml
+++ b/ERP/Core.Erp.Web/Areas/CuentasPorCobrar/Views/CobranzaRetenciones/Index.cshtml
@@ -1,13 +1,13 @@
 ﻿@model Core.Erp.Info.Helps.cl_filtros_Info
 @{
-    Layout = "~/Areas/Reportes/Views/Layout/_Layout_filtros.cshtml";
+    Layout = "~/Views/Layout/_LayoutConsulta.cshtml";
     ViewBag.Title = "Cobros por retención";
     if (Session["IdUsuario"] == null || Session["IdEmpresa"] == null)
     {
         Response.Redirect("~/Account/Login");
     }
 }
-@using (Html.BeginForm())
+@using (Html.BeginForm("Index","CobranzaRetenciones",FormMethod.Post, new { @class = "form", @role = "form"}))
 {
     <div class="box collapsed-box">
         <div class="box-header with-border">
